tests/toylang/neg/000933_mutation.toylang
program a = { if a int then sleep; } .
